# wrscompositor

./: .gitignore  AUTHORS  COPYING  COPYING.MIT  LICENSE-NOTICES.txt  README  README.md  README.rst  configure  duduregi.pro  wrscompositor-2016.12.08.spdx  wrscompositor.pro
clients/: clients.pro
clients/camera/: camera.cpp  camera.h  camera.pro  camera.pro.in  camera.qrc  main.cpp  main.qml  qwaylandivisurface.cpp
clients/eyes/: .WLEyes.cpp.swo  WLEyes.cpp  WLEyes.h  eyes.pro
clients/ivi_client/: ivi_client.pro  main.cpp  qiviwindow.cpp  qiviwindow.h  qtwaylandiviapplication.cpp  qtwaylandiviapplication.h  qtwaylandivisurface.cpp  qtwaylandivisurface.h
clients/keyboard/: InputPanel.qml  KeyButton.qml  KeyModel.qml  keyboard.pro.in  keyboard.qrc  main.cpp
clients/libs/: libs.pro
clients/libs/protocol/: ivi-controller.xml
clients/libs/qtwayland/: qtwayland.pro  qwayland-common.cpp  qwayland-common.h  qwayland-common.h.rej  qwaylandinputmethod.cpp  qwaylandinputmethod.h  qwaylandiviextension.cpp  qwaylandiviextension.h
clients/libs/wayland-ivi-extension/: qwaylandiviextension.cpp  qwaylandiviextension.h  qwaylandivisurface.cpp  qwaylandivisurface.h  wayland-ivi-extension.pro
clients/mediaplayer/: Playlist.qml  main.cpp  main.qml  mediaplayer.pro  mediaplayer.pro.in  mediaplayer.qrc
clients/mocknavi/: .ShaderLighting.cpp.swo  Car.cpp  Ground.cpp  Ground.h  MockNavi.cpp  ShaderBase.cpp  ShaderLighting.cpp  ShaderLighting.h  Street.h  main.cpp  mocknavi.pro
clients/phone/: main.cpp  main.qml  phone.cpp  phone.h  phone.pro.in  qwaylandivisurface.cpp  qwaylandivisurface.h
clients/skobblernavi/: html.qrc  main.cpp  qwaylandivisurface.cpp  qwaylandivisurface.h  skobblernavi.cpp  skobblernavi.h  skobblernavi.pro  skobblernavi.pro.in
clients/skobblernavi/html5/: index.html  leaflet.css  leaflet.js  skobbler-2.0.js
clients/textinput/: main.cpp  main.qml  textinput.pro.in
compositor/: GeniviWaylandIVIExtension.cpp  GeniviWaylandIVIExtension.h  Process.cpp  Process.h  WindowFrame.qml  clusterview.cpp  clusterview.h  compositor.pro.in  config-default.js  config.h.in  digitalcluster.cpp  digitalcluster.h  duduregicompositor.cpp  duduregicompositor.h  duduregiconfig.h.in  hmi-controller.js  hmi-interface.js  main.cpp  projectionmode.cpp  projectionmode.h  projectionmode.xml  reardisplay.cpp  reardisplay.h  run-duduregi  systemd-util.cpp  systemd-util.h  util.cpp  util.h  virtualkeyboard.cpp  virtualkeyboard.h  virtualkeyboard.xml  vna_dbusclient.cpp  vna_dbusclient.h  wr_dbusclient.cpp  wr_dbusclient.h  wrscompositor.cpp  wrscompositor.h  wrscompositor.js  wrscompositor.qml  wrsiviapplication.cpp  (+10 more)
compositor/data/: send-dummy-video.py
compositor/tools/: update-qt-eglfs-kms-conf
duduregi/: AUTHORS  COPYING  ContrastEffect.qml  CoverFlow.qml  GeniviWaylandIVIExtension.cpp  GeniviWaylandIVIExtension.h  Launcher.qml  MainMenu.qml  Makefile  Process.cpp  Process.h  StatusBar.qml  WindowChrome.qml  WindowContainer.qml  WindowFrame.qml  assets.qrc  cluster.qml  clusterview.cpp  clusterview.h  compositor.js  config-default.js  config.js  configure  dbus_client.cpp  dbus_client.h  digitalcluster.cpp  digitalcluster.h  duduregi.pro  duduregi.pro.in  duduregicompositor.cpp  duduregicompositor.h  duduregiconfig.h.in  main.cpp  main.qml  moc_Process.cpp  projectionmode.cpp  projectionmode.h  projectionmode.xml  reardisplay.cpp  reardisplay.h  (+7 more)
genivi/layer_management-1_2/: .gitignore  CMakeLists.txt  Doxyfile  LayerManager.spec.in  NOTICE  README  RELEASE_NOTES.txt  generate_specification.sh  toolchain.cmake  toolchain_x11_wayland.cmake
genivi/layer_management-1_2/LayerManagerClient/ilmClient/: CMakeLists.txt  ilm.pc.in
genivi/layer_management-1_2/LayerManagerClient/ilmClient/include/: ilm_client.h
genivi/layer_management-1_2/LayerManagerClient/ilmClient/src/: ilm_client.c
genivi/layer_management-1_2/LayerManagerExamples/EGLDFBApplicationExample/: CMakeLists.txt
genivi/layer_management-1_2/LayerManagerExamples/EGLDFBApplicationExample/include/: egl_helper.h  gles2application.h
genivi/layer_management-1_2/LayerManagerExamples/EGLDFBApplicationExample/src/: eglDFB_application.cpp  egl_helper.cpp  gles2application.cpp
genivi/layer_management-1_2/LayerManagerPlugins/Renderers/GraphicLib/LayerManagerGraphicDFB/: CMakeLists.txt
genivi/layer_management-1_2/LayerManagerPlugins/Renderers/Platform/DFBRenderer/: CMakeLists.txt
genivi/layer_management-1_2/LayerManagerPlugins/Renderers/Platform/DFBRenderer/include/: DFBRenderer.h  ShaderProgramGLES.h
genivi/layer_management-1_2/LayerManagerPlugins/Renderers/Platform/DFBRenderer/src/: DFBRenderer.cpp  ShaderProgramGLES.cpp
genivi/web-api-vehicle/: README
lg-home-test/: Button.qml  home.qml  htmlwidget.cpp  htmlwidget.h  lg-home-test.pro  main.cpp  mainwidget.cpp  mainwidget.h  menuhandler.cpp  menuhandler.h  qmlwidget.cpp  qmlwidget.h
plugins/: plugins.pro
plugins/platforminputcontexts/: platforminputcontexts.pro
qt5-examples/eyes/: WLEyes.cpp  WLEyes.h  WLEyesRenderer.h  eyes.pro  main.cpp
qt5-examples/mocknavi/: Car.h  House.cpp  House.h  MockNavi.h  ShaderBase.h  ShaderLighting.cpp  Street.cpp
targets/fsl-mm2014/: deploy.sh
targets/ndis166/: kms.json
targets/pfi-mm2014/: README  README.rst
vt-handler/: duduregi-vt-handler-dbg  logind-client.cpp  logind-client.h  main.cpp  vt-handler.pro.in  wrscompositor-vt-handler-dbg
wr-amb/: DrivingWheelHandler.py  GeniviVNA.py  WSProtocols.py  com.windriver.automotive.conf  deploy.sh  iPodClient.py  ifconfig.py  joystick.py  run-wr-amb  wr-amb  wr_amb.py
wr-amb/ipod/: Makefile  test-player.py  wrs-ipod-2.h  wrs_ipod_2.i  wrs_ipod_2.py  wrs_ipod_2_pyutil.c  wrs_ipod_2_pyutil.h  wrs_ipod_2_wrap.c
wr-amb/wheel/: gsimulator.js  gsocket.js  index.html  navigation.css  navigation.html
wr-amb/www/: 3DDrivingSimulatorGE-min.js  3DDrivingSimulatorGE.js  GameSound.swf  dropdown.css  game.css  gsocket.js  index.html  ipaddress.cgi  ipod.html  wheel.html  wstest.html
wr-html5-ipodplayer/: main.cpp  mainwindow.cpp  mainwindow.h  wr-html5-ipodplayer.pro
(+540 files in other folders)
